EADeployment/CA2/infra-deploy/hubble/hubbleingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: hubble.4eec9e20b63c410b88ee.northeurope.aksapp.io
    http:
      paths:
      - backend:
          service:
            name: hubble-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hubble.4eec9e20b63c410b88ee.northeurope.aksapp.io
    secretName: hubble-cert
